--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
-    <header></header>
-    <h1></h1>
+    <header>pingolino</header>
+    <h1>através da minha janela </h1>
     <p></p>
 </body>
