--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<html.lang= "pt-BR">
+<head>
+   <link rel="stylesheet" href="style.css">
+   <title>Recomendador do pingolino</title>
+</head>
 <body>
     <header>pingolino</header>
+
+
     <h1>através da minha janela </h1>
     <p></p>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=yE59pAygBLo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
